# claude-tg

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-02-07-claude-tg-design.md  2026-02-07-claude-tg-implementation.md
scripts/hooks/: redirect_ask_to_tg_buttons.py
src/claude_tg/: __init__.py  __main__.py  askq_ui.py  bot.py  config.py  conversation_log.py  formatter.py  mcp_server.py  media.py  review.py  runner.py  stream.py  subagent_stream.py
tests/: test_formatter.py  test_integration.py  test_mcp_server.py  test_media.py  test_runner.py  test_stream.py
