[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-tg"
version = "0.8.2"
description = "Claude Code <-> Telegram bridge"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "python-telegram-bot>=21.0",
    "mcp>=1.0",
    "groq>=0.4",
]

[project.scripts]
claude-tg = "claude_tg.__main__:main"
claude-tg-mcp = "claude_tg.mcp_server:main"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["asyncio: async test (handled by pytest-asyncio)"]
